--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
     
     <!-- Preload critical assets -->
     <link rel="preload" href="/src/assets/flyer.jpg" as="image" />
+    
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-S1XFNG6X48"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-S1XFNG6X48');
+    </script>
   </head>
   <body>
     <div id="root"></div>
